@@ -79,11 +79,14 @@
 			<input class="blend" type="text" id="rtinput" name="qsticket" value="" size="15" {tip text="Enter request tracker ID, subject or requestor name and press Enter"}>
 			&nbsp;<img src="img/account.gif" alt="">
 			<input class="blend" type="text" id="accountinput" name="qsaccount" value="" size="15" {tip text="Enter account or alias name and press Enter"}>
+			&nbsp;<img src="img/docum.gif" alt="">
+			<input class="blend" type="text" id="documentinput" name="qsdocument" value="" size="15" {tip text="Enter document number and press Enter"}>
 			<script type="text/javascript">
 				new AutoSuggest(document.getElementById('quicksearch'),document.getElementById('customerinput'),'?m=quicksearch&ajax=1&mode=customer&what=',1);
 				new AutoSuggest(document.getElementById('quicksearch'),document.getElementById('nodeinput'),'?m=quicksearch&ajax=1&mode=node&what=',1);
 				new AutoSuggest(document.getElementById('quicksearch'),document.getElementById('rtinput'),'?m=quicksearch&ajax=1&mode=ticket&what=',1);
 				new AutoSuggest(document.getElementById('quicksearch'),document.getElementById('accountinput'),'?m=quicksearch&ajax=1&mode=account&what=',1);
+				new AutoSuggest(document.getElementById('quicksearch'),document.getElementById('documentinput'),'?m=quicksearch&ajax=1&mode=document&what=',1);
 			</script>
 			{* Enter key submit hack for IE *}
 			<input type="image" src="img/empty.gif" width="0" height="0" style="border: none;">
