@@ -13,6 +13,7 @@ version ?.??.?? (????-??-??):
   - we can delete all customer liabilities by one click [chilan]
   - add fullnumber with dispatched document full number in documents table [chilan]
   - documentlist: selection of numberplan is possible [chilan]
+  - added quick search by document full number [chilan]
 
 version 1.11.15 (2014-05-15):
 
